--- a/Depo/Depo/Presentation/UserStories/Others/LoginWithGooglePopup/LoginWithGooglePopup.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/LoginWithGooglePopup/LoginWithGooglePopup.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -19,17 +19,17 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="Ao9-CO-fwg">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NCa-fh-IRO">
-                    <rect key="frame" x="30" y="358" width="354" height="190.5"/>
+                    <rect key="frame" x="30" y="373" width="368" height="190.33333333333337"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="oz0-nQ-hqZ">
-                            <rect key="frame" x="16" y="40" width="322" height="20.5"/>
+                            <rect key="frame" x="16" y="40" width="336" height="20.333333333333329"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6x-Bc-0EQ">
-                                    <rect key="frame" x="0.0" y="0.0" width="322" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="336" height="20.333333333333332"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -37,7 +37,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="bae-x5-3Wf">
-                            <rect key="frame" x="77" y="100.5" width="200" height="50"/>
+                            <rect key="frame" x="84" y="100.33333333333331" width="200" height="50"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wek-gB-swQ" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="50"/>
@@ -58,10 +58,21 @@
                         <constraint firstItem="oz0-nQ-hqZ" firstAttribute="leading" secondItem="NCa-fh-IRO" secondAttribute="leading" constant="16" id="OeQ-4V-qnt"/>
                         <constraint firstItem="oz0-nQ-hqZ" firstAttribute="top" secondItem="NCa-fh-IRO" secondAttribute="top" constant="40" id="Qnm-kX-XJx"/>
                         <constraint firstAttribute="trailing" secondItem="oz0-nQ-hqZ" secondAttribute="trailing" constant="16" id="XAz-OC-5mh"/>
+                        <constraint firstAttribute="width" constant="368" id="fMY-qy-ZMq"/>
                         <constraint firstAttribute="bottom" secondItem="bae-x5-3Wf" secondAttribute="bottom" constant="40" id="l2k-Gt-lLJ"/>
                         <constraint firstItem="bae-x5-3Wf" firstAttribute="centerX" secondItem="NCa-fh-IRO" secondAttribute="centerX" id="oT8-J9-Jrk"/>
                         <constraint firstItem="bae-x5-3Wf" firstAttribute="top" secondItem="oz0-nQ-hqZ" secondAttribute="bottom" constant="40" id="vQo-Ka-1LQ"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="fMY-qy-ZMq"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=regular">
+                        <mask key="constraints">
+                            <include reference="fMY-qy-ZMq"/>
+                        </mask>
+                    </variation>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="LE4-Ta-4ZH"/>
@@ -72,6 +83,12 @@
                 <constraint firstItem="NCa-fh-IRO" firstAttribute="centerX" secondItem="LE4-Ta-4ZH" secondAttribute="centerX" id="gZn-li-kTW"/>
                 <constraint firstItem="NCa-fh-IRO" firstAttribute="centerY" secondItem="LE4-Ta-4ZH" secondAttribute="centerY" id="hWG-iF-6wg"/>
             </constraints>
+            <variation key="widthClass=regular">
+                <mask key="constraints">
+                    <exclude reference="Le9-Zy-33h"/>
+                    <exclude reference="ZfQ-AJ-hTE"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="137.68115942028987" y="131.91964285714286"/>
         </view>
     </objects>
