--- a/Depo/Depo/Presentation/UserStories/Others/MessageAndButtonPopup/MessageAndButtonPopup.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/MessageAndButtonPopup/MessageAndButtonPopup.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,17 +19,17 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="tz9-r9-muz">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8fr-Of-eKK">
-                    <rect key="frame" x="30" y="376" width="354" height="154.5"/>
+                    <rect key="frame" x="30" y="391" width="368" height="154.33333333333337"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Rw4-B6-IlS">
-                            <rect key="frame" x="20" y="30" width="314" height="20.5"/>
+                            <rect key="frame" x="20" y="30" width="328" height="20.333333333333329"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0c3-ur-gKC">
-                                    <rect key="frame" x="0.0" y="0.0" width="314" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="328" height="20.333333333333332"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -36,7 +37,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Sdi-Fj-Dsl">
-                            <rect key="frame" x="77" y="74.5" width="200" height="50"/>
+                            <rect key="frame" x="84" y="74.333333333333314" width="200" height="50"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Pu-DD-YgZ" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="50"/>
@@ -58,9 +59,20 @@
                         <constraint firstAttribute="trailing" secondItem="Rw4-B6-IlS" secondAttribute="trailing" constant="20" id="AvM-g3-k6O"/>
                         <constraint firstAttribute="bottom" secondItem="Sdi-Fj-Dsl" secondAttribute="bottom" constant="30" id="Dfk-2X-v2e"/>
                         <constraint firstItem="Rw4-B6-IlS" firstAttribute="top" secondItem="8fr-Of-eKK" secondAttribute="top" constant="30" id="EFb-B1-sMw"/>
+                        <constraint firstAttribute="width" constant="368" id="NWj-Hy-Q3d"/>
                         <constraint firstItem="Rw4-B6-IlS" firstAttribute="leading" secondItem="8fr-Of-eKK" secondAttribute="leading" constant="20" id="U6Y-No-MRK"/>
                         <constraint firstItem="Sdi-Fj-Dsl" firstAttribute="top" secondItem="Rw4-B6-IlS" secondAttribute="bottom" constant="24" id="ciS-Hb-8qk"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="NWj-Hy-Q3d"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=regular">
+                        <mask key="constraints">
+                            <include reference="NWj-Hy-Q3d"/>
+                        </mask>
+                    </variation>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="NhE-Bj-mbx"/>
@@ -71,6 +83,12 @@
                 <constraint firstItem="8fr-Of-eKK" firstAttribute="centerY" secondItem="NhE-Bj-mbx" secondAttribute="centerY" id="ZbW-1K-fHN"/>
                 <constraint firstItem="8fr-Of-eKK" firstAttribute="leading" secondItem="NhE-Bj-mbx" secondAttribute="leading" constant="30" id="trT-b3-0DV"/>
             </constraints>
+            <variation key="widthClass=regular">
+                <mask key="constraints">
+                    <exclude reference="Wyw-PO-KpE"/>
+                    <exclude reference="trT-b3-0DV"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="-209" y="69"/>
         </view>
     </objects>
