--- a/Depo/Depo/Presentation/UserStories/Others/PasswordEnterPopup/PasswordEnterPopup.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PasswordEnterPopup/PasswordEnterPopup.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -23,17 +23,17 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="ix6-YO-yfz">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uQd-mR-j3p">
-                    <rect key="frame" x="30" y="176" width="354" height="554"/>
+                    <rect key="frame" x="30" y="191" width="368" height="554"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7lQ-90-FuU">
-                            <rect key="frame" x="20" y="30" width="314" height="20.5"/>
+                            <rect key="frame" x="20" y="30" width="328" height="20.333333333333329"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6x-0Z-4Ca">
-                                    <rect key="frame" x="0.0" y="0.0" width="314" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="328" height="20.333333333333332"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -41,21 +41,21 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="264" placeholderIntrinsicHeight="209" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GgI-ax-mYA">
-                            <rect key="frame" x="28" y="70.5" width="298" height="209"/>
+                            <rect key="frame" x="28" y="70.333333333333314" width="312" height="209"/>
                         </stackView>
                         <view contentMode="scaleToFill" placeholderIntrinsicWidth="289" placeholderIntrinsicHeight="164.5" translatesAutoresizingMaskIntoConstraints="NO" id="sXa-dE-8dM" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="26" y="287.5" width="302" height="164.5"/>
+                            <rect key="frame" x="26" y="287.33333333333331" width="316" height="164.66666666666669"/>
                             <color key="backgroundColor" name="primaryBackground"/>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8B5-tU-FFG">
-                            <rect key="frame" x="0.0" y="472" width="354" height="1"/>
+                            <rect key="frame" x="0.0" y="472" width="368" height="1"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="MMA-PH-ald"/>
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xM1-yz-AR2">
-                            <rect key="frame" x="16" y="493" width="322" height="31"/>
+                            <rect key="frame" x="16" y="493" width="336" height="31"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" title="Button"/>
                             <connections>
@@ -81,7 +81,18 @@
                         <constraint firstItem="xM1-yz-AR2" firstAttribute="leading" secondItem="uQd-mR-j3p" secondAttribute="leading" constant="16" id="oMr-dH-Jdr"/>
                         <constraint firstAttribute="trailing" secondItem="xM1-yz-AR2" secondAttribute="trailing" constant="16" id="rpH-RN-1wE"/>
                         <constraint firstItem="8B5-tU-FFG" firstAttribute="leading" secondItem="uQd-mR-j3p" secondAttribute="leading" id="t5r-HU-yEF"/>
+                        <constraint firstAttribute="width" constant="368" id="wpx-Dk-6Ce"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="wpx-Dk-6Ce"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=regular">
+                        <mask key="constraints">
+                            <include reference="wpx-Dk-6Ce"/>
+                        </mask>
+                    </variation>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="N5c-6g-D9j"/>
@@ -92,6 +103,12 @@
                 <constraint firstItem="uQd-mR-j3p" firstAttribute="centerX" secondItem="N5c-6g-D9j" secondAttribute="centerX" id="Eut-h7-b6w"/>
                 <constraint firstItem="N5c-6g-D9j" firstAttribute="trailing" secondItem="uQd-mR-j3p" secondAttribute="trailing" constant="30" id="PA7-Xi-sMD"/>
             </constraints>
+            <variation key="widthClass=regular">
+                <mask key="constraints">
+                    <exclude reference="PA7-Xi-sMD"/>
+                    <exclude reference="0l1-Xz-wXx"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="-210.1449275362319" y="68.973214285714278"/>
         </view>
     </objects>
