--- a/Depo/Depo/Presentation/UserStories/Settings/ConnectedAccounts/Cells/AppleGoogleAccountConnectionCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ConnectedAccounts/Cells/AppleGoogleAccountConnectionCell.xib
@@ -20,14 +20,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AppleGoogleAccountConnectionCell" rowHeight="207" id="KGk-i7-Jjw" customClass="AppleGoogleAccountConnectionCell" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="192"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="192"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="LTp-7L-DRq">
-                        <rect key="frame" x="18" y="18" width="284" height="49"/>
+                        <rect key="frame" x="18" y="18" width="284" height="18"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="mSP-SS-yDd">
                                 <rect key="frame" x="0.0" y="0.0" width="284" height="18"/>
@@ -38,16 +38,10 @@
                                 <color key="textColor" name="darkText"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rzK-SH-jcD">
-                                <rect key="frame" x="0.0" y="28" width="284" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="DJA-5V-E2V">
-                        <rect key="frame" x="18" y="91" width="284" height="31"/>
+                        <rect key="frame" x="18" y="60" width="284" height="31"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="nsu-1C-FM6">
                                 <rect key="frame" x="0.0" y="0.0" width="225" height="31"/>
@@ -75,7 +69,7 @@
                         </subviews>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Qfv-lu-JcV">
-                        <rect key="frame" x="18" y="138" width="284" height="31"/>
+                        <rect key="frame" x="18" y="107" width="284" height="31"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="npr-AE-me6">
                                 <rect key="frame" x="0.0" y="0.0" width="225" height="31"/>
@@ -109,9 +103,9 @@
                     <constraint firstItem="LTp-7L-DRq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="BSm-pP-Oug"/>
                     <constraint firstItem="Qfv-lu-JcV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="HUa-ZQ-9KY"/>
                     <constraint firstItem="DJA-5V-E2V" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="Lug-qM-umL"/>
+                    <constraint firstAttribute="bottom" secondItem="Qfv-lu-JcV" secondAttribute="bottom" constant="23" id="R0d-a5-lAn"/>
                     <constraint firstItem="Qfv-lu-JcV" firstAttribute="top" secondItem="DJA-5V-E2V" secondAttribute="bottom" constant="16" id="Tl6-jB-29r"/>
                     <constraint firstAttribute="trailing" secondItem="DJA-5V-E2V" secondAttribute="trailing" constant="18" id="Wh1-6o-y5x"/>
-                    <constraint firstAttribute="bottom" secondItem="Qfv-lu-JcV" secondAttribute="bottom" constant="23" id="XsY-4C-3RJ"/>
                     <constraint firstItem="DJA-5V-E2V" firstAttribute="top" secondItem="LTp-7L-DRq" secondAttribute="bottom" constant="24" id="Yc2-O2-WfF"/>
                     <constraint firstAttribute="trailing" secondItem="Qfv-lu-JcV" secondAttribute="trailing" constant="18" id="v48-PM-qo3"/>
                     <constraint firstItem="LTp-7L-DRq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="18" id="xZZ-JW-v07"/>
@@ -123,7 +117,6 @@
                 <outlet property="appleLabel" destination="fhD-gt-7Bt" id="Lig-40-QS5"/>
                 <outlet property="appleLogo" destination="YXW-DS-mTk" id="cCa-OV-JJR"/>
                 <outlet property="appleSwitch" destination="oL1-Zn-emG" id="mhT-KZ-lkd"/>
-                <outlet property="descriptionLabel" destination="rzK-SH-jcD" id="5b7-nY-pPa"/>
                 <outlet property="googleLabel" destination="2Lk-6h-hLy" id="eLe-Sa-Ufg"/>
                 <outlet property="googleSwitch" destination="C9i-ia-jf2" id="OhG-3l-k9v"/>
                 <outlet property="titleLabel" destination="mSP-SS-yDd" id="xzk-1D-ZKy"/>
